[project]
name = "iad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "acdh-django-browsing>=3.2",
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.7",
    "django-autocomplete-light>=3.12.1",
    "django-leaflet>=0.32.0",
    "django-reversion>=6.0.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-gis>=1.2.0",
    "geojson>=3.2.0",
    "geopandas>=1.1.1",
    "lxml>=6.0.2",
    "psycopg2-binary>=2.9.11",
    "rdflib>=7.4.0",
    "requests>=2.32.5",
    "tablib>=3.9.0",
]
